func: 完成模型管理

--- a/pom.xml
+++ b/pom.xml
@@ -357,6 +357,13 @@
                 <version>${revision}</version>
             </dependency>-->
 
+            <!--  AI模块  -->
+            <dependency>
+                <groupId>org.dromara</groupId>
+                <artifactId>ruoyi-ai</artifactId>
+                <version>${revision}</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
@@ -496,5 +503,3 @@
     </pluginRepositories>
 
 </project>
-
-
