feat: 新增AI模块，包含AI应用管理、聊天会话和工作流编排功能及相关菜单权限与数据库脚本

--- a/ruoyi-admin/src/main/resources/application.yml
+++ b/ruoyi-admin/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 # 开发环境配置
 server:
   # 服务器的HTTP端口，默认为8080
-  port: 8080
+  port: 8090
   servlet:
     # 应用的访问路径
     context-path: /
@@ -118,6 +118,7 @@ security:
     - /*/api-docs
     - /*/api-docs/**
     - /warm-flow-ui/config
+    - /ai/chat/stream
 
 # MyBatisPlus配置
 # https://baomidou.com/config/
