--- a/pom.xml
+++ b/pom.xml
@@ -486,6 +486,18 @@
                 <enabled>true</enabled>
             </releases>
         </repository>
+        <!-- Maven Central Repository (备用,用于下载LangGraph4j等较新的库) -->
+        <repository>
+            <id>central</id>
+            <name>Maven Central</name>
+            <url>https://repo1.maven.org/maven2/</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
     </repositories>
 
     <pluginRepositories>
