--- a/ruoyi-modules/ruoyi-ai/pom.xml
+++ b/ruoyi-modules/ruoyi-ai/pom.xml
@@ -109,6 +109,12 @@
             <artifactId>langchain4j-ollama</artifactId>
         </dependency>
 
+        <!-- LangChain4j Google AI Gemini Integration -->
+        <dependency>
+            <groupId>dev.langchain4j</groupId>
+            <artifactId>langchain4j-google-ai-gemini</artifactId>
+        </dependency>
+
         <!-- LangChain4j 通义千问 (DashScope) 集成 -->
         <dependency>
             <groupId>dev.langchain4j</groupId>
