--- a/ruoyi-modules/ruoyi-ai/pom.xml
+++ b/ruoyi-modules/ruoyi-ai/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>ruoyi-ai</artifactId>
 
     <description>
-        ruoyi-ai AI功能模块
+        KMatrix AI功能模块
     </description>
 
     <properties>
