--- a/ruoyi-admin/src/main/resources/application.yml
+++ b/ruoyi-admin/src/main/resources/application.yml
@@ -52,7 +52,7 @@ user:
 # Spring配置
 spring:
   application:
-    name: RuoYi-Vue-Plus
+    name: KMatrix
   threads:
     # 开启虚拟线程 仅jdk21可用
     virtual:
@@ -171,16 +171,16 @@ springdoc:
     enabled: true
   info:
     # 标题
-    title: '标题：RuoYi-Vue-Plus管理系统_接口文档'
+    title: '标题：KMatrix管理系统_接口文档'
     # 描述
     description: '描述：用于管理集团旗下公司的人员信息,具体包括XXX,XXX模块...'
     # 版本
     version: '版本号: ${project.version}'
     # 作者信息
     contact:
-      name: Lion Li
-      email: crazylionli@163.com
-      url: https://gitee.com/dromara/RuoYi-Vue-Plus
+      name: Mahone
+      email: mahone@gmail.com
+      url: https://gitee.com/kyxxjs/kmatrix
   #这里定义了两个分组，可定义多个，也可以不定义
   group-configs:
     - group: 1.演示模块
