feat: 实现AI工作流引擎，包含节点、状态管理、服务、控制器及相关领域模型和SQL脚本。

--- a/ruoyi-admin/src/main/resources/application.yml
+++ b/ruoyi-admin/src/main/resources/application.yml
@@ -119,6 +119,7 @@ security:
     - /*/api-docs/**
     - /warm-flow-ui/config
     - /ai/chat/stream
+    - /chat/**
 
 # MyBatisPlus配置
 # https://baomidou.com/config/
