feat: 添加匿名聊天和嵌入式会话功能，支持应用和会话令牌认证。

--- a/ruoyi-admin/src/main/resources/application.yml
+++ b/ruoyi-admin/src/main/resources/application.yml
@@ -119,6 +119,7 @@ security:
     - /*/api-docs/**
     - /warm-flow-ui/config
     - /ai/chat/stream
+    - /ai/chat/**
     - /chat/**
 
 # MyBatisPlus配置
