feat: 新增 KMatrix AI 模块数据库 schema 及相关项目结构文件。

--- a/ruoyi-admin/src/main/resources/application-dev.yml
+++ b/ruoyi-admin/src/main/resources/application-dev.yml
@@ -55,15 +55,15 @@ spring:
         master:
           type: ${spring.datasource.type}
           # MySQL 数据源
-          driverClassName: com.mysql.cj.jdbc.Driver
-          url: jdbc:mysql://119.29.242.177:3306/kmatrix?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8&autoReconnect=true&rewriteBatchedStatements=true&allowPublicKeyRetrieval=true&nullCatalogMeansCurrent=true
-          username: root
-          password: kyxxjs@2tencent
+          # driverClassName: com.mysql.cj.jdbc.Driver
+          # url: jdbc:mysql://119.29.242.177:3306/kmatrix?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8&autoReconnect=true&rewriteBatchedStatements=true&allowPublicKeyRetrieval=true&nullCatalogMeansCurrent=true
+          # username: root
+          # password: kyxxjs@2tencent
           # PostgreSQL 连接配置 - 请根据实际环境修改
-          # driverClassName: org.postgresql.Driver
-          # url: jdbc:postgresql://localhost:5432/kmatrix?currentSchema=public&useUnicode=true&characterEncoding=utf8&reWriteBatchedInserts=true
-          # username: postgres
-          # password: your_password
+          driverClassName: org.postgresql.Driver
+          url: jdbc:postgresql://localhost:5432/kmatrix?currentSchema=public&useUnicode=true&characterEncoding=utf8&reWriteBatchedInserts=true
+          username: postgres
+          password: your_password
 #        # MySQL 数据源 (已注释)
 #        mysql_master:
 #          type: ${spring.datasource.type}
