--- a/ruoyi-modules/ruoyi-generator/pom.xml
+++ b/ruoyi-modules/ruoyi-generator/pom.xml
@@ -59,19 +59,19 @@
             <version>${anyline.version}</version>
         </dependency>
 
-        <dependency>
+        <!-- <dependency>
             <groupId>org.anyline</groupId>
             <artifactId>anyline-data-jdbc-mysql</artifactId>
             <version>${anyline.version}</version>
-        </dependency>
+        </dependency> -->
 
 
         <!-- anyline支持100+种类型数据库 添加对应的jdbc依赖与anyline对应数据库依赖包即可 -->
-<!--        <dependency>-->
-<!--            <groupId>org.anyline</groupId>-->
-<!--            <artifactId>anyline-data-jdbc-postgresql</artifactId>-->
-<!--            <version>${anyline.version}</version>-->
-<!--        </dependency>-->
+       <dependency>
+           <groupId>org.anyline</groupId>
+           <artifactId>anyline-data-jdbc-postgresql</artifactId>
+           <version>${anyline.version}</version>
+       </dependency>
 
         <!-- anyline支持100+种类型数据库 添加对应的jdbc依赖与anyline对应数据库依赖包即可 -->
 <!--        <dependency>-->
