--- a/ruoyi-admin/src/main/resources/application-dev.yml
+++ b/ruoyi-admin/src/main/resources/application-dev.yml
@@ -290,6 +290,12 @@ justauth:
       redirect-uri: ${justauth.address}/social-callback?source=gitea
 --- # AI 配置
 ai:
+  # 文件存储配置
+  file-store:
+    # 存储类型: 1-OSS, 2-本地文件
+    type: 2
+    # 本地文件存储路径(仅当 type=2 时生效)
+    local-path: F:/kmatrix/uploads
   reranker:
     # 是否启用 ONNX BGE-Reranker 模型
     enabled: true
@@ -297,3 +303,4 @@ ai:
     model-path: F:\reranker\model.onnx
     # Tokenizer 文件路径
     tokenizer-path: F:\reranker\tokenizer.json
+
