--- a/ruoyi-admin/src/main/resources/application-dev.yml
+++ b/ruoyi-admin/src/main/resources/application-dev.yml
@@ -300,6 +300,7 @@ ai:
     # 是否启用 ONNX BGE-Reranker 模型
     enabled: true
     # ONNX 模型文件路径 (需要下载 corto-ai/bge-reranker-large-onnx)
+    # 可选 bge-reranker-v2-m3 或 bge-reranker-base
     model-path: F:\reranker\model.onnx
     # Tokenizer 文件路径
     tokenizer-path: F:\reranker\tokenizer.json
