--- a/docker/supervisord.conf
+++ b/docker/supervisord.conf
@@ -5,15 +5,23 @@ pidfile=/var/run/supervisord.pid
 childlogdir=/var/log/supervisor
 
 [program:postgresql]
-command=/usr/lib/postgresql/17/bin/postgres -D /var/lib/postgresql/data
+command=/usr/lib/postgresql/17/bin/postgres -D /kmatrix-data/postgres -c logging_collector=off
 user=postgres
 autorestart=true
 priority=100
+stdout_logfile=/var/log/supervisor/postgresql.out.log
+stdout_logfile_maxbytes=10MB
+stderr_logfile=/var/log/supervisor/postgresql.err.log
+stderr_logfile_maxbytes=10MB
 
 [program:redis]
 command=redis-server /etc/redis/redis.conf
 autorestart=true
 priority=100
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
 
 [program:java]
 # wait for postgres to be ready (handled in entrypoint somewhat, but good practice here too if possible, or retry logic in app)
