feat: 增加试用环境url发布

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 ######################################################################
 # Build Tools
 
+application-dev.yml
+application-prod.yml
 docker/push_docker_standalone.ps1
 .gradle
 /build/
