--- a/docker/Dockerfile.standalone
+++ b/docker/Dockerfile.standalone
@@ -7,6 +7,7 @@ FROM registry.cn-guangzhou.aliyuncs.com/kyxxjs/kmatrix_base:latest
 # WORKDIR is already set to /app in base image
 
 # Copy Backend Artifacts (Pre-built)
+COPY kmatrix-service/ruoyi-admin/target/lib /app/lib
 COPY kmatrix-service/ruoyi-admin/target/ruoyi-admin.jar /app/ruoyi-admin.jar
 # Copy Frontend Artifacts (Pre-built)
 COPY kmatrix-ui/apps/admin/dist /usr/share/nginx/html/admin
