优化： 简化长引用变量

--- a/ruoyi-admin/src/main/resources/application.yml
+++ b/ruoyi-admin/src/main/resources/application.yml
@@ -3,6 +3,8 @@ server:
   # 服务器的HTTP端口，默认为8080
   port: 8090
   servlet:
+    encoding:
+      charset: UTF-8
     # 应用的访问路径
     context-path: /
   # undertow 配置
