bug fix: openAI类模型的测试与对话；打包docker镜像问题

--- a/docker/supervisord.conf
+++ b/docker/supervisord.conf
@@ -25,7 +25,7 @@ stderr_logfile_maxbytes=0
 
 [program:java]
 # wait for postgres to be ready (handled in entrypoint somewhat, but good practice here too if possible, or retry logic in app)
-command=java -Dspring.profiles.active=docker -jar /app/ruoyi-admin.jar
+command=java -Dspring.profiles.active=prod,docker -jar /app/ruoyi-admin.jar
 environment=JAVA_OPTS="%(ENV_JAVA_OPTS)s"
 autorestart=true
 priority=200
