--- a/docker/Dockerfile.standalone
+++ b/docker/Dockerfile.standalone
@@ -18,6 +18,7 @@ COPY kmatrix-service/docker/redis.conf /etc/redis/redis.conf
 COPY kmatrix-service/docker/nginx.conf /etc/nginx/nginx.conf
 COPY kmatrix-service/docker/supervisord.conf /etc/supervisor/conf.d/supervisord.conf
 COPY kmatrix-service/docker/application-docker.yml /app/config/application-docker.yml
+COPY kmatrix-service/docker/application-prod.yml /app/config/application-prod.yml
 COPY kmatrix-service/docker/entrypoint-standalone.sh /app/entrypoint.sh
 
 # Copy SQL Scripts for Init
